# tirante

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tirante.py
src/tirante/: __init__.py  __main__.py  chapter_images_manager.py  chapters_manager.py  create_database.py  download_manager.py  download_manga.py  get_chapter_image_list.py  get_chapters_list.py  tirante.py  update_database.py
tests/: basic_tests.py
tirante/: __init__.py  __main__.py  basic_tests.py  cbx_manager.py  cbz_manager.py  ch_man.py  chapter_images_manager.py  chapters_manager.py  chim_man.py  cr_dat.py  create_database.py  csv_manager.py  do_man.py  down_man.py  download_manager.py  download_manga.py  gcil.py  gcl.py  get_chapter_image_list.py  get_chapters_list.py  tirante.py  up_dat.py  update_database.py  version.py  web_scrapping.py
tirante/tests/: __init__.py  basic_tests.py
