[metadata]
name = tirante
author = David Luevano Alvarado
author_email = david@luevano.xyz
summary = A (wannabe) manga download manager
description_file = README.md
license = GPLv3
home_page = https://github.com/luevano/tirante
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
keywords =
	python
    manga
    download
    manager

[files]
packages =
	tirante

[bdist_wheel]
universal = 0

[entry_points]
console_scripts =
	tirante = tirante:main

[options]
package_dir =
	= src
packages = find:
include_package_data = True

[options.packages.find]
where = src